--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 </head>
 <body>
 
-<h2>Profit Calculator</h2>
+<h2>Coin Profit Calculator</h2>
 <form id="profitForm">
-    <label for="buyRate">Buy Rate:</label>
-    <input type="number" id="buyRate" name="buyRate" step="any" required><br><br>
-
-    <label for="sellRate">Sell Rate:</label>
-    <input type="number" id="sellRate" name="sellRate" step="any" required><br><br>
-
-    <label for="pencilQuantity">Pencil Quantity:</label>
-    <input type="number" id="pencilQuantity" name="pencilQuantity" step="any" required><br><br>
-
-    <button type="button" onclick="validateAndCalculate()">Calculate</button>
+    <div class="form-group">
+        <label for="buyRate">Buy Rate:</label>
+        <input type="number" id="buyRate" name="buyRate" step="any" required><br><br>
+        <span class="error-message" id="buyRateError"></span>
+    </div>
+    <div class="form-group">
+        <label for="sellRate">Sell Rate:</label>
+        <input type="number" id="sellRate" name="sellRate" step="any" required><br><br>
+        <span class="error-message" id="sellRateError"></span><br>
+    </div>
+    <div class="form-group"> 
+        <label for="quantity">Quantity:</label>
+        <input type="number" id="quantity" name="quantity" step="any" required><br><br>
+        <span class="error-message" id="quantityError"></span><br>
+    </div>
+    <button type="button" class="btn-submit" onclick="validateAndCalculate()">Calculate</button>
+    <button type="reset" class="btn-reset" onabort="reset()">Reset</button>
 </form>
-
-<p>Total Earnings including pencil: <span id="totalEarnings"></span></p>
-<p>Total Profit Percentage: <span id="totalProfitPercentage"></span></p>
+<div class="result">
+    <p>Total Earnings($): <span id="totalEarnings" style="font-size: 24px;"></span></p>
+    <p>Total Profit (%): <span id="totalProfitPercentage" style="font-size: 24px;"></span></p>
+</div>
 </body>
 </html>
