--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="form-group"> 
         <label for="quantity">Quantity:</label>
-        <input type="number" id="quantity" name="quantity" value="1" step="any" required>
+        <input type="number" id="quantity" name="quantity" step="any" required>
         <span class="error-message" id="quantityError"></span>
     </div>
     <button type="button" class="btn-submit" onclick="validateAndCalculate()">Calculate</button>
