UPDATE: Email update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p>Total Earnings($): <span id="totalEarnings" style="font-size: 24px;"></span></p>
 </div>
 <div class="developedBy">
-    <p>Developed by: Zia, Contact at: <a href="mailto:zia.ete10@gmail.com">zia.ete10@gmail.com</a> </p>
+    <p>Developed by: Zia, Contact at: <a href="mailto:zia.udn1@gmail.com">zia.udn1@gmail.com</a> </p>
 </div>
 </body>
 </html>
