--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 <div class="developedBy">
     <p>Developed by: Zia, Contact at: <a href="mailto:zia.udn1@gmail.com">zia.udn1@gmail.com</a> </p>
-    <p><a href="https://t.me/zia009">Telegram Contact @zia009</a>    </p>
+    <p>Telegram Contact <a href="https://t.me/zia009">@zia009</a>    </p>
 </div>
 </body>
 </html>
